add zoom to the pictures

--- a/partials/index.adventure.partial.html
+++ b/partials/index.adventure.partial.html
@@ -10,27 +10,27 @@
     </div>
     <div class="adventure__cards-container container">
         <div class="adventure__horse-ranch">
-            <img src="img/horse-ranch-cottage.jpeg" alt="Horse ranch cottage">
+            <img src="img/horse-ranch-cottage.jpeg" alt="Horse ranch cottage" data-large="img/horse-ranch-cottage-large.jpeg">
             <h3>Yosemite Gateway Horse Ranch "Getaway" Cottage</h3>
         </div>
         <div class="adventure__tuolumne-meadows-lodge">
-            <img src="img/tuolumne-meadows-lodge.jpeg" alt="Tuolumne meadows lodge">
+            <img src="img/tuolumne-meadows-lodge.jpeg" alt="Tuolumne meadows lodge" data-large="img/tuolumne-meadows-lodge.jpeg">
             <h3>Tuolumne Meadows Lodge</h3>
         </div>
         <div class="adventure__sierra-sunrise">
-            <img src="img/sierra-sunrise.jpeg" alt="Sierra sunrise">
+            <img src="img/sierra-sunrise.jpeg" alt="Sierra sunrise" data-large="img/sierra-sunrise.jpeg">
             <h3>Sierra Sunrise Vacation Rental</h3>
         </div>
         <div class="adventure__donya-maries-cottage">
-            <img src="img/donya-maries-cottage.jpeg" alt="Donya maries cottage">
+            <img src="img/donya-maries-cottage.jpeg" alt="Donya maries cottage" data-large="img/donya-maries-cottage.jpeg">
             <h3>Donya Marie's Cottage on Evergreen</h3>
         </div>
         <div class="adventure__sierra-meadow">
-            <img src="img/sierra-meadow-cottage.jpeg" alt="Sierra meadow cottage">
+            <img src="img/sierra-meadow-cottage.jpeg" alt="Sierra meadow cottage" data-large="img/sierra-meadow-cottage.jpeg">
             <h3>Sierra Meadow Cottage</h3>
         </div>
         <div class="adventure__yosemites-river-house">
-            <img src="img/yosemites-river-house.jpeg" alt="Yosemite's river house">
+            <img src="img/yosemites-river-house.jpeg" alt="Yosemite's river house" data-large="img/yosemites-river-house.jpeg">
             <h3>Yosemite’s River House</h3>
         </div>
     </div>
