--- a/css/index.adventure.css
+++ b/css/index.adventure.css
@@ -83,3 +83,21 @@
     font-weight: 400;
     line-height: 25px;
 }
+
+.adventure__cards-container img {
+    border-radius: 5%;
+    width: 100%;
+    height: auto;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.adventure__cards-container img:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+}
+
+.adventure__cards-container img.enlarged {
+    transform: scale(1.5);
+    z-index: 1;
+    position: relative;
+}
