--- a/partials/our-facilities.partial.html
+++ b/partials/our-facilities.partial.html
@@ -2,7 +2,7 @@
     <h2 class="our-facilities__title">Our Facilities</h2>
     <span class="our-facilities__text"></span>
     <div class="our-facilities__image"></div> 
-    <img class="our-facilities__image" width="900.8" src="img/nature.jpg" alt="description of nature for recreation"> 
+    <img class="our-facilities__image" src="img/nature.jpg" alt="description of nature for recreation"> 
 </section>
 
 
