--- a/css/our-facilities.css
+++ b/css/our-facilities.css
@@ -1,13 +1,15 @@
 .our-facilities__title {
-    color: var(--text-color);    
-    font-size: 39px;
-    font-weight: 700;
+    font-family: var(--title-font-family);
+    font-size: 2.4rem;
+    font-weight: bold;
+    color: #282520;
     text-align: center;
-    margin: 20px;
 }
 
 .our-facilities {
-    background-image: cover;
-    align-items: center;
-    justify-content: center;
+    padding: 80px 24px;
+    background-image: url(../img/background-img-facilities.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 0;
 }
