Added spa vacations part

--- a/css/about.css
+++ b/css/about.css
@@ -2,4 +2,5 @@
 @import url(header.css); 
 @import url(about.variety-of-cabins.css);
 @import url(about.season-activities.css);
+@import url(about.spa-vacations.css);
 @import url(footer.css);
