--- a/css/global.css
+++ b/css/global.css
@@ -15,6 +15,8 @@
      --background-color-zoom:rgba(0,0,0,0.4);
      --fields-border-color: #d0d0d0;
      --description-color: #848484;
+     --contact-form-color: rgba(40, 37, 32, 0.8);
+     --contact-form-name-color: rgba(255, 255, 255, 0.24);
      --rentals-description-color: #bdbdbd;
      --fields-background-color: #f5f5f5;
      --form_outline-color: #3b99fc;
