Added any-questions form formspree

--- a/partials/about.any-questions.html
+++ b/partials/about.any-questions.html
@@ -5,7 +5,7 @@
             <p class="any-questions__content_info-text">Complete the form and our manager will contact you as soon as
                 possible.</p>
         </div>
-        <form id="any-questions__form" class="any-questions__form" action="http://localhost:3000/post" method="post">
+        <form id="any-questions-form-formspree" class="any-questions__form" action="https://formspree.io/f/maygeqzv" method="POST">
             <div class="any-questions__form-box ">
                 <div class="any-questions__form-windows ">
                     <label class="any-questions__form-label" for="contact-name"></label>
@@ -22,6 +22,6 @@
                 </div>
             </div>
         </form>
-        <div id="contact-form-status"></div>
+        <div id="any-questions-form-status"></div>
     </div>
 </section>
