--- a/css/about.spa-vacations.css
+++ b/css/about.spa-vacations.css
@@ -2,16 +2,16 @@
     background-image: url(../img/about-background-image-white.jpg);
     background-size: cover;
     background-position: center;
-    width: 100%;
     padding: 32px;
+    width: 100%;
 }
 
 .spa-vacations__title {
-    color: var(--text-color); 
+    color: var(--text-color);
     font-size: 23px;
     font-weight: bold;
+    padding-top: 40px;
     text-align: center;
-    padding-top: 40px;         
 }
 
 .spa-vacations__description {
@@ -19,27 +19,28 @@
     font-family: var(--description-font-family);
     font-size: 16px;
     font-weight: 400;
-    text-align: center;
+    line-height: 25.6px;
+    max-width: 100%;
     position: relative;
-    max-width: 100%;       
+    text-align: center;
     word-wrap: break-word;
-    line-height: 25.6px;     
 }
 
 .spa-vacations__image-container {
     border-radius: 10px;
-    width: 100%;
+    padding-top: 40px;
+    padding-bottom: 40px;
     position: relative;
-    vertical-align: baseline; 
-    padding-top: 40px;     
+    vertical-align: baseline;
+    width: 100%;
 }
 
 .spa-vacations__image {
+    align-items: center;
     border-radius: 10px;
     border-color: var(--fields-border-color);
+    display: flex;
+    justify-content: center;
     min-width: 232px;
     min-height: 153.812px;
-    display: flex;
-    align-items: center;
-    justify-content: center;   
 }
