--- a/css/our-facilities.css
+++ b/css/our-facilities.css
@@ -16,7 +16,7 @@
 }
 .our-facilities__image container img {
     position: absolute;
-    border-radius: inherit;
+    border-radius: 10%;
     width: 100%;
     height: 100%;
     font-family: "object-fit:cover";
