--- a/css/our-facilities.css
+++ b/css/our-facilities.css
@@ -15,5 +15,9 @@
 }
 
 .our-facilities__image {
+    position: absolute;
     border-radius: 5%;
+    width: 100%;
+    height: 100%;
+    font-family: "object-fit:cover";
 }
