--- a/css/our-facilities.css
+++ b/css/our-facilities.css
@@ -1,7 +1,6 @@
 .our-facilities__title {
     font-family: var(--title-font-family);
     font-size: 2.4rem;
-    font-weight: bold;
     color: #282520;
     text-align: center;
 }
@@ -11,13 +10,16 @@
     background-image: url(../img/background-img-facilities.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: 0;
 }
 
 .our-facilities__image {
-    position: absolute;
-    border-radius: 5%;
-    width: 100%;
-    height: 100%;
-    font-family: "object-fit:cover";
+    border-radius: 10px;
+    max-height: 350px;
+}
+
+@media (min-width: 1588px) {
+    .our-facilities__image {
+        border-radius: 10px;
+        max-width: 458px;
+    }
 }
