Changed any questions html file

--- a/partials/about.any-questions.html
+++ b/partials/about.any-questions.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="any-questions__form-windows ">
                     <label class="any-questions__form-label" for="contact-pnumber"></label>
-                    <input class="any-questions__form-tel" type="tel" pattern="[0-9]{1,9}" name="contact-pnumber"
+                    <input class="any-questions__form-tel" type="tel" name="contact-pnumber"
                         id="contact-pnumber" placeholder="Phone number*" required>
                 </div>
                 <div class="any-questions__form-button ">
