--- a/partials/testimonials.partial.html
+++ b/partials/testimonials.partial.html
@@ -1,11 +1,19 @@
 <section class="testimonials">
-    <h2 class="testimonials__title"></h2>
-    <div class="testimonials__images">
-        <img width="330" class="testimonials__image" src="img/little-girl-kissing-horse.jpg" alt="Little girl kissing horse">
-        <img width="330" class="testimonials__image" src="img/kayaking.jpg" alt="Kayaking">
-        <img width="330" class="testimonials__image" src="img/scenery.jpg" alt="Scenery">
-        <img width="330" class="testimonials__image" src="img/big-lake.jpg" alt="Big lake">
-        <img width="330" class="testimonials__image" src="img/skiing.jpg" alt="Skiing">
+    <div class="container">
+        <h2 class="testimonials__title">Testimonials</h2>
+        <div class="testimonials__images">
+            <div class="testimonials__image-container">
+                <img width="330" class="testimonials__image" src="img/little-girl-kissing-horse.jpg"
+                    alt="Little girl kissing horse">
+            </div>
+            <div class="testimonials__image-container">
+                <img width="330" class="testimonials__image" src="img/kayaking.jpg" alt="Kayaking">
+                <img width="330" class="testimonials__image" src="img/scenery.jpg" alt="Scenery">
+            </div>
+            <div class="testimonials__image-container">
+                <img width="330" class="testimonials__image" src="img/big-lake.jpg" alt="Big lake">
+                <img width="330" class="testimonials__image" src="img/skiing.jpg" alt="Skiing">
+            </div>
+        </div>
     </div>
-
 </section>
