updated css testimonials

--- a/partials/testimonials.partial.html
+++ b/partials/testimonials.partial.html
@@ -15,5 +15,8 @@
                 <img class="testimonials__image testimonials__image-small" src="img/skiing.jpg" alt="Skiing">
             </div>
         </div>
+        <div class="testimonials__button">
+            <a class="testimonials__button-link" href="#">ALL TESTIMONIALS</a>
+        </div>
     </div>
 </section>
