--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -65,3 +65,25 @@
     }
 
 }
+
+.testimonials__button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.testimonials__button-link{
+    color: black;
+    border: 1px solid rgb(89, 150, 115);
+    font-size: 0.75rem;
+    font-weight: 600;
+    width: 175px;
+    padding: 20px;
+    border-radius: 34px;
+    text-align: center;
+}
+
+.testimonials__button-link:hover{
+    background-color:rgb(89, 150, 115);
+    color: white;
+}
